7.7.3
 - More strictness in `header-pre.hxx`/`header-post.hxx` checking.
 - Fix up more damage done by auto-formatting.
 - Add some missing headers in `<pqxx/pqxx>`.  (#551)
7.7.2
 - Fix up damage done by auto-formatting.
7.7.1
 - Don't try to set C++ version in `configure`.  User can set compiler options.
 - Finally fix a long-standing silly warning in autogen.
 - Fix `digit_to_number` not being found on some comilers.  (#518, #519)
 - In audit mode, define `_FORTIFY_SOURCE` to enable some extra checks.
 - Make more functions `constexpr`.  Nothing particularly useful though.
 - Make more functions `noexcept`.
 - Move constructor & assignment for `result`.
 - Support LGTM.com and Facebook "infer" static analysis.
 - Deprecated `set_variable`/`get_variable` on `transaction_base`.
 - (Design unearthed warts in SQL variables, which were then fixed.)
 - Set/get session variables on `connection`: `set_session_var`/`get_var`.
 - Set/get local variables: execute SQL statements.
 - When using `select()`, include `<winsock2.h>` if available.
7.7.0
 - Fix `stream_to` for differing table/client encodings.  (#473)
 - Use `[[likely]]` & `[[unlikely]]` only in C++20, to silence warnings.
 - Fix clang "not a const expression" error in Windows.  (#472)
 - Fix warnings about `[[likely]]` in `if constexpr`.  (#475)
 - Clearer error for ambiguous string conversion of `char` type.  (#481)
 - Pseudo-statement in `prepare()` error was for the wrong statement.  (#488)
 - New class, `connecting` for nonblocking connection to the database.  (#487)
 - New class, `range` for SQL range types.  (#490)
 - Replace `std::isdigit` with a safer alternative.
 - Support string conversions for `std::chrono::year_month_day`. (#492)
 - Helper for implementing string traits: `generic_to_buf`.
 - Support `result::at(row_num, col_num)`.
 - Support `result[row_num, col_num]` if the compiler allows it.
 - Work around broken `std::filesystem::path` in MinGW.  (#498)