@@ -1,3 +1,4 @@
+#include <pqxx/stream_to>
 #include <pqxx/transaction>
 
 #include "../test_helpers.hxx"
@@ -74,8 +75,63 @@ void test_result_iterator_assignment()
 }
 
 
+void check_employee(std::string name, int salary)
+{
+  PQXX_CHECK(name == "x" or name == "y" or name == "z", "Unknown name.");
+  PQXX_CHECK(
+    salary == 1000 or salary == 1200 or salary == 1500, "Unknown salary.");
+}
+
+
+void test_result_for_each()
+{
+  pqxx::connection conn;
+  pqxx::work tx{conn};
+  tx.exec0("CREATE TEMP TABLE employee(name varchar, salary int)");
+  auto fill{pqxx::stream_to::table(tx, {"employee"}, {"name", "salary"})};
+  fill.write_values("x", 1000);
+  fill.write_values("y", 1200);
+  fill.write_values("z", 1500);
+  fill.complete();
+
+  auto const res{tx.exec("SELECT name, salary FROM employee ORDER BY name")};
+
+  // Use for_each with a function.
+  res.for_each(check_employee);
+
+  // Use for_each with a simple lambda.
+  res.for_each(
+    [](std::string name, int salary) { check_employee(name, salary); });
+
+  // Use for_each with a lambda closure.
+  std::string names{};
+  int total{0};
+
+  res.for_each([&names, &total](std::string name, int salary) {
+    names.append(name);
+    total += salary;
+  });
+  PQXX_CHECK_EQUAL(
+    names, "xyz", "result::for_each did not accumulate names correctly.");
+  PQXX_CHECK_EQUAL(total, 1000 + 1200 + 1500, "Salaries added up wrong.");
+
+  // In addition to regular conversions, you can receive arguments as
+  // string_view, or as references.
+  names.clear();
+  total = 0;
+  res.for_each([&names, &total](std::string_view &&name, int const &salary) {
+    names.append(name);
+    total += salary;
+  });
+  PQXX_CHECK_EQUAL(
+    names, "xyz", "result::for_each did not accumulate names correctly.");
+  PQXX_CHECK_EQUAL(total, 1000 + 1200 + 1500, "Salaries added up wrong.");
+}
+
+
 PQXX_REGISTER_TEST(test_result_iteration);
 PQXX_REGISTER_TEST(test_result_iter);
 PQXX_REGISTER_TEST(test_result_iterator_swap);
 PQXX_REGISTER_TEST(test_result_iterator_assignment);
+PQXX_REGISTER_TEST(test_result_for_each);
 } // namespace
